--- a/SimpleWeatherForecast/src/main/res/values/strings.xml
+++ b/SimpleWeatherForecast/src/main/res/values/strings.xml
@@ -8,5 +8,9 @@
         Copyright © 2013 tvbarthel.\n\nThis program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.\n\nThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.\n\nYou should have received a copy of the GNU General Public License along with this program. If not, see http://www.gnu.org/licenses/.
     </string>
 
+    <!-- About dialog fragment -->
+    <string name="dialog_about_title">About</string>
+    <string name="dialog_about_content">SimpleWeatherForecast is an open-source application developed by Vincent \"vbarthel\" Barthélémy, a student in Computer Engineering.\n\nCode source: https://github.com/tvbarthel/SimpleWeatherForecast\n\nThis application use the openweathermap API: http://openweathermap.org/</string>
+
     <string name="dialog_ok">OK</string>
 </resources>
