--- a/SimpleWeatherForecast/src/main/res/values/strings.xml
+++ b/SimpleWeatherForecast/src/main/res/values/strings.xml
@@ -12,5 +12,12 @@
     <string name="dialog_about_title">About</string>
     <string name="dialog_about_content">SimpleWeatherForecast is an open-source application developed by Vincent \"vbarthel\" Barthélémy, a student in Computer Engineering.\n\nCode source: https://github.com/tvbarthel/SimpleWeatherForecast\n\nThis application use the openweathermap API: http://openweathermap.org/</string>
 
+    <!-- More apps dialog fragment -->
+    <string name="dialog_more_apps_title">More Apps</string>
+    <string name="dialog_more_apps_simplethermometer_app_name">Simple Thermometer</string>
+    <string name="dialog_more_apps_simplethermometer_package_name">fr.tvbarthel.apps.simplethermometer</string>
+    <string name="dialog_more_apps_chase_whisply_app_name">Chase Whisply</string>
+    <string name="dialog_more_apps_chase_whisply_package_name">fr.tvbarthel.games.chasewhisply</string>
+
     <string name="dialog_ok">OK</string>
 </resources>
