--- a/SimpleWeatherForecast/src/main/res/values/strings.xml
+++ b/SimpleWeatherForecast/src/main/res/values/strings.xml
@@ -44,4 +44,11 @@
     <string name="toast_already_up_to_date">Already up to date.</string>
     <string name="toast_no_connection_available">Could not refresh weather, no connection available.</string>
     <string name="toast_not_allowed_to_access_location">Please enable the access to your location.</string>
+
+    <!-- Menu item -->
+    <string name="menu_item_refresh">Refresh</string>
+    <string name="menu_item_unit">Set Unit</string>
+    <string name="menu_item_about">About</string>
+    <string name="menu_item_license">License</string>
+    <string name="menu_item_more_apps">More Apps</string>
 </resources>
