--- a/SimpleWeatherForecast/src/main/res/values-fr/strings.xml
+++ b/SimpleWeatherForecast/src/main/res/values-fr/strings.xml
@@ -10,7 +10,7 @@
 
     <!-- About dialog fragment -->
     <string name="dialog_about_title">A Propos</string>
-    <string name="dialog_about_content">SimpleWeatherForecast est une application open-source développée par Vincent \"vbarthel\" Barthélémy, un étudiant en informatique.\n\nCode source: https://github.com/tvbarthel/SimpleWeatherForecast\n\nCette application utiliser l\'API d\'openweathermap : http://openweathermap.org/</string>
+    <string name="dialog_about_content">SimpleWeatherForecast est une application open-source développée par Vincent \"vbarthel\" Barthélémy, un étudiant en informatique.\n\nCode source: https://github.com/tvbarthel/SimpleWeatherForecast\n\nCette application utilise l\'API d\'openweathermap : http://openweathermap.org/</string>
 
     <!-- More apps dialog fragment -->
     <string name="dialog_more_apps_title">Plus d\'applications</string>
