--- a/SimpleWeatherForecast/src/main/res/values/strings.xml
+++ b/SimpleWeatherForecast/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <!-- License dialog fragment -->
     <string name="dialog_license_title">License</string>
     <string name="dialog_license_content">
-        Copyright © 2013 tvbarthel.\n\nThis program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.\n\nThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.\n\nYou should have received a copy of the GNU General Public License along with this program. If not, see http://www.gnu.org/licenses/.
+        Copyright © 2014 tvbarthel.\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
     </string>
 
     <!-- About dialog fragment -->
