--- a/SimpleWeatherForecast/src/main/res/values/strings.xml
+++ b/SimpleWeatherForecast/src/main/res/values/strings.xml
@@ -54,4 +54,11 @@
     <string name="menu_item_license">License</string>
     <string name="menu_item_more_apps">More Apps</string>
     <string name="menu_item_support">Buy us a coffee</string>
+    <string name="menu_item_contact_us">Contact Us</string>
+
+    <!-- Contact Us -->
+    <string name="contact_us_title">Contact Us</string>
+    <string name="contact_us_email">tvbarthel@gmail.com</string>
+    <string name="contact_us_default_subject">[SimpleWeatherForecast] </string>
+    <string name="contact_us_uri">mailto:%1$s?subject=%2$s</string>
 </resources>
