Add french traductions

--- a/SimpleWeatherForecast/src/main/res/values-fr/strings.xml
+++ b/SimpleWeatherForecast/src/main/res/values-fr/strings.xml
@@ -35,4 +35,12 @@
     <string name="menu_item_about">À Propos</string>
     <string name="menu_item_license">License</string>
     <string name="menu_item_more_apps">Plus d\'Apps</string>
+    <string name="menu_item_support">Supportez nous</string>
+    <string name="menu_item_contact_us">Contactez nous</string>
+
+    <!-- Contact Us -->
+    <string name="contact_us_title">Contactez nous</string>
+    <string name="contact_us_email">tvbarthel@gmail.com</string>
+    <string name="contact_us_default_subject">[SimpleWeatherForecast] </string>
+    <string name="contact_us_uri">mailto:%1$s?subject=%2$s</string>
 </resources>
