Add a 'thanks' menu item when the user supports us

--- a/SimpleWeatherForecast/src/main/res/values-fr/strings.xml
+++ b/SimpleWeatherForecast/src/main/res/values-fr/strings.xml
@@ -36,6 +36,7 @@
     <string name="menu_item_more_apps">Plus d\'Apps</string>
     <string name="menu_item_support">Supportez nous</string>
     <string name="menu_item_contact_us">Contactez nous</string>
+    <string name="menu_item_thanks">Merci !</string>
 
     <!-- Contact Us -->
     <string name="contact_us_title">Contactez nous</string>
