Fix some lint warnings

--- a/SimpleWeatherForecast/src/main/res/values/strings.xml
+++ b/SimpleWeatherForecast/src/main/res/values/strings.xml
@@ -60,8 +60,8 @@
     <string name="contact_us_default_subject">[SimpleWeatherForecast] </string>
 
     <!-- Error messages -->
-    <string name="error_message_server_not_available">Server not available, try again later</string>
-    <string name="error_message_malformed_url">Malformed Url</string>
-    <string name="error_message_io_exception">IO Exception</string>
+    <string name="error_message_server_not_available" translatable="false">Server not available, try again later</string>
+    <string name="error_message_malformed_url" translatable="false">Malformed Url</string>
+    <string name="error_message_io_exception" translatable="false">IO Exception</string>
 
 </resources>
